Fix menu on mobile

--- a/themes/frame/source/css/partials/header.styl
+++ b/themes/frame/source/css/partials/header.styl
@@ -55,16 +55,6 @@
         .site-brand-container
             width 50%
             
-        .site-nav
-            width 100%
-            .menu-list
-                height 0
-                overflow hidden
-                .menu-item
-                    margin-right 0
-                    margin-left auto
-                    margin-top $margin-m-0
-
 
             .active
                 margin-top $margin-m-1
